# ALVR

./: .gitattributes  CLAUDE.md  Cargo.toml  DIAGNOSTICS_PLAN.md  LOG_ANALYSIS.md  README.md  USB_CONNECTION_FIXES_PLAN.md  USB_CONNECTION_FIX_REPORT.md  build.ps1  test-loop.ps1
.beads/: issues.jsonl
.claude/: settings.local.json
alvr/api_adapter/: Cargo.toml
alvr/api_adapter/src/: lib.rs
alvr/dashboard/: Cargo.toml
alvr/server_core/: Cargo.toml
scripts/: copy-dlls.bat  copy-dlls.ps1  kill-all-vr.ps1  kill_vr_related_processes.ps1
test-logs/: stability_test_results.txt
test-logs/iteration_1_20251128_080424/: alvr_logcat.txt  vrserver.txt
test-logs/iteration_1_20251128_081036/: alvr_logcat.txt
test-logs/iteration_1_20251128_081306/: alvr_logcat.txt
test-logs/iteration_1_20251128_081428/: alvr_logcat.txt  vrserver.txt
test-logs/iteration_1_20251128_081942/: alvr_logcat.txt  client_logcat.txt  crash_log.txt  session.json  vrserver.txt
test-logs/iteration_1_20251128_083715/: alvr_logcat.txt  analysis.json  client_logcat.txt  crash_log.txt  session.json  vrserver.txt
test-logs/iteration_1_20251128_084615/: alvr_logcat.txt  client_logcat.txt  crash_log.txt  vrserver.txt
test-logs/iteration_1_20251128_084927/: alvr_logcat.txt  client_logcat.txt  crash_log.txt  session.json  vrserver.txt
test-logs/iteration_1_20251128_090755/: alvr_logcat.txt  analysis.json  client_logcat.txt  crash_log.txt  session.json  vrserver.txt
test-logs/iteration_1_20251128_091252/: ANALYSIS_REPORT.md  TECHNICAL_ANALYSIS.md  alvr_logcat.txt  analysis.json  crash_log.txt  (+4 more)
(+97 files in other folders)
