[package]
name = "api_adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_events.workspace = true
alvr_packets.workspace = true
alvr_session.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.26"
ureq = { version = "3", features = ["json"] }
urlencoding.workspace = true
